Added styles to index.html and all h1 elements.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,20 @@
 * {
     background-color: #faebd7;
 }
+
+h1 {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 48px;
+    text-align: center;
+}
+
+.nav-item {
+    color: #920404;
+    font-family: 'Trebuchet MS', Arial, sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.nav-link {
+    color: #01865e;
+}
